# BUILDH3R-JUNE

Aleo_Demox/myleotoken/: README.md  program.json
Aleo_Demox/myleotoken/src/: main.leo
Algorand/: README.md  main.py  pyproject.toml
starknet/: README.md
starknet/src/: lib.cairo
starknet/src/artifacts/: balance.casm  balance.json
