[tool.poetry]
name = "codespace-algorand"
version = "0.1.0"
description = ""
authors = ["Surya Chaudhary <96589294+SuryaChaudhary26@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
